[package]
name = "astra-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "astra-db"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }

# Auth / crypto
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config / env
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Errors
thiserror = "1"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System metrics
sysinfo = "0.30"

# HTTP client (for internal probe)
reqwest = { version = "0.12", features = ["json"] }

# SSE streaming
tokio-stream = "0.1"
futures = "0.3"

# Redaction (executor log safety)
regex-lite = "0.1"

# Hex encoding (secrets)
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
